@@ -33,20 +33,20 @@ static void configLine(poptContext con, char * line)
     if (strncmp(line, con->appName, nameLength)) return;
 
     line += nameLength;
-    if (*line == '\0' || !isspace(*line)) return;
+    if (*line == '\0' || !_isspaceptr(line)) return;
 
-    while (*line != '\0' && isspace(*line)) line++;
+    while (*line != '\0' && _isspaceptr(line)) line++;
     entryType = line;
-    while (*line == '\0' || !isspace(*line)) line++;
+    while (*line == '\0' || !_isspaceptr(line)) line++;
     *line++ = '\0';
 
-    while (*line != '\0' && isspace(*line)) line++;
+    while (*line != '\0' && _isspaceptr(line)) line++;
     if (*line == '\0') return;
     opt = line;
-    while (*line == '\0' || !isspace(*line)) line++;
+    while (*line == '\0' || !_isspaceptr(line)) line++;
     *line++ = '\0';
 
-    while (*line != '\0' && isspace(*line)) line++;
+    while (*line != '\0' && _isspaceptr(line)) line++;
     if (*line == '\0') return;
 
 /*@-temptrans@*/ /* FIX: line alias is saved */
@@ -139,7 +139,7 @@ int poptReadConfigFile(poptContext con, const char * fn)
 	  case '\n':
 	    *dst = '\0';
 	    dst = buf;
-	    while (*dst && isspace(*dst)) dst++;
+	    while (*dst && _isspaceptr(dst)) dst++;
 	    if (*dst && *dst != '#')
 		configLine(con, dst);
 	    chptr++;
